# byte-tracker

./: LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  byte_tracker.py  pyproject.toml
byte_tracker/: __init__.py  byte_tracker.py
byte_tracker/types/: tracker_config_type.py  tracker_detections_type.py
byte_tracker/utils/: ops.py  strack.py
src/: basetrack.py
src/utils/: matching.py
utils/: __init__.py  kalman_filter.py  strack.py
